# testbot

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Procfile  README.md  RustConfig  fly.toml
.github/workflows/: bloat.yml  main.yml  rust-clippy.yml
migrations/2021-04-14-023553_descriptions_table/: down.sql  up.sql
migrations/2021-04-14-224808_value_not_null/: down.sql  up.sql
old.github/workflows/: main.yml  rust-clippy.yml
src/: main.rs  models.rs  schema.rs
src/commands/: advice.rs  ball.rs  botsnack.rs  dadjoke.rs  desc.rs  dogfacts.rs  drink.rs  food.rs  github.rs  math.rs  meta.rs  mod.rs  owner.rs  pingpong.rs  random.rs  source.rs  stonkcomp.rs  stonks.rs
