[package]
name = "testbot"
version = "0.1.0"
authors = ["Travis Carr <tmcarr@tmcarr.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/tmcarr/testbot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env_logger = "0.9.0"
log = "0.4.21"
rand = "0.9.0-alpha.1"
# migrant_lib = "0.33.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
dotenvy = "0.15.7"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]
version = "0.11.7"

# [dependencies.diesel]
# version = "2.0.2"
# features = [
#     "postgres",
#     "r2d2",
# ]

# [dependencies.diesel_migrations]
# version = "2.0.0"
