[package]
name = "testbot"
version = "0.1.0"
authors = ["Travis Carr <tmcarr@tmcarr.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/tmcarr/testbot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# env_logger = "0.9.0"
# migrant_lib = "0.33.0"
dotenvy = "0.15.7"
log = "0.4.20"
poise = "0.6.1"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }

[dependencies.serenity]
version = "0.12.4"
features = [
    "builder",
    "cache",
    "client",
    "collector",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]

# [dependencies.diesel]
# version = "2.2.0"
# features = [
#     "postgres",
#     "r2d2",
# ]

# [dependencies.diesel_migrations]
# version = "2.1.0"
